<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/bt_scan_item_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/device_mac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/bt_scan_item_mac"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/device_rssi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bt_scan_item_rssi"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:textSize="20sp" />

</LinearLayout>